feat: Add deployment configuration
- Add build.sh script for Render deployment
- Update Django settings for production with environment variables
- Add PostgreSQL support with dj-database-url
- Configure CORS and static files for production
- Create deployment guide with step-by-step instructions
- Add environment example files for both backend and frontend
- Update documentation and gitignore for better organization

--- a/.gitignore
+++ b/.gitignore
@@ -335,6 +335,10 @@ local_settings.py
 dev_settings.py
 test_settings.py
 
+# Private documentation files
+*SUBMISSION*.md
+*ASSIGNMENT*.md
+
 # Backup files
 *.backup
 *.bak
